# 4D

./: .env.example  .eslintrc.js  .gitignore  Dockerfile  README.md  docker-compose.yml  netlify.toml  package-lock.json  package.json  tsconfig.json  turbo.json  vercel.json  vite.config.js
.github/workflows/: ci.yml  deploy.yml
apps/api/: .env.example  package.json  tsconfig.json
apps/api/src/: index.ts
apps/api/src/config/: env.ts
apps/api/src/middleware/: auth.ts  error-handler.ts
apps/api/src/routes/: auth.routes.ts  execution.routes.ts  health.routes.ts  market.routes.ts  optimization.routes.ts  pattern.routes.ts  trading.routes.ts
apps/api/src/services/execution/: execution.service.ts  index.ts
apps/api/src/services/market/: index.ts  mt5.service.ts
apps/api/src/services/optimization/: index.ts  optimization.service.ts
apps/api/src/services/pattern/: index.ts  pattern.service.ts
apps/web/: .env.example  next.config.js  package.json  tsconfig.json  vitest.config.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/lib/auth/: client.ts  index.ts  (+1 more)
config/: trading.yaml
docs/: AUDIT_REPORT.md  CONFIG.md  CONFIGURATION.md  CONFIG_AUDIT.md  DATABASE_CHECKLIST.md  DECISION_ENGINE.md  DEPLOYMENT.md  ENVIRONMENT.md  EXECUTION.md  HEALTH_CHECK.md  PATTERNS.md  PRODUCTION_READY.md  RISK_ENGINE.md  SECURITY.md  TREND_ENGINE.md  VERCEL_CHECKLIST.md
resources/js/pages/: OcrPage.vue
robot/: .env.example  Dockerfile.robot  pyproject.toml
robot/src/: __init__.py  main.py
robot/src/config/: settings.py
robot/src/connectors/: mt5_connector.py
(+3 files in other folders)
