[tool.poetry]
name = "forexos-robot"
version = "0.1.0"
description = "ForexOS Trading Robot - MT5 Integration"
authors = ["ForexOS Team"]
readme = "README.md"
packages = [{ include = "src", from = "." }]

[tool.poetry.dependencies]
python = "^3.11"
MetaTrader5 = "^5.0.45"
numpy = "^1.26.0"
pandas = "^2.2.0"
pydantic = "^2.6.0"
python-dotenv = "^1.0.0"
httpx = "^0.27.0"
redis = "^5.0.0"
loguru = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.3.0"
mypy = "^1.9.0"
black = "^24.2.0"
isort = "^5.13.0"

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
